--- a/template/package.json
+++ b/template/package.json
@@ -25,6 +25,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "fastclick": "^1.0.6",
+    "vant": "^1.0.1",
+    "vant-css": "^1.0.1",
+    "vuex": "^3.0.1",
     "vue": "^2.5.2"{{#router}},
     "vue-router": "^3.0.1"{{/router}}
   },
@@ -70,6 +75,8 @@
     "mocha": "^3.2.0",
     "chai": "^4.1.2",
     "sinon": "^4.0.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "sinon-chai": "^2.8.0",
     "inject-loader": "^3.0.0",
     "babel-plugin-istanbul": "^4.1.1",
