--- a/template/package.json
+++ b/template/package.json
@@ -75,8 +75,6 @@
     "mocha": "^3.2.0",
     "chai": "^4.1.2",
     "sinon": "^4.0.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
     "sinon-chai": "^2.8.0",
     "inject-loader": "^3.0.0",
     "babel-plugin-istanbul": "^4.1.1",
@@ -88,9 +86,10 @@
     "cross-spawn": "^5.0.1",
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
-    {{/e2e}}
+    {{/e2e}}    
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
+    "babel-plugin-import": "^1.4.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -110,6 +109,9 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
+    "qs": "^6.5.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
