--- a/template/package.json
+++ b/template/package.json
@@ -22,7 +22,8 @@
     {{#lint}}
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}",
     {{/lint}}
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "dll": "webpack --config ./build/webpack.dll.conf.js",
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -86,7 +87,7 @@
     "cross-spawn": "^5.0.1",
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
-    {{/e2e}}    
+    {{/e2e}}
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-plugin-import": "^1.4.0",
@@ -104,6 +105,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "happypack": "^4.0.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "node-notifier": "^5.1.2",
     "postcss-import": "^11.0.0",
